--- a/standard_graphs.ipynb
+++ b/standard_graphs.ipynb
@@ -13,6 +13,8 @@
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.colors import LightSource\n",
+    "import matplotlib.colors as mcolors\n",
+    "\n",
     "%matplotlib inline\n",
     "import mplhep as hep\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
@@ -32,7 +34,7 @@
     "import functions_giammi as fugi\n",
     "cmap_temp, cmap_temp_go, Magma_r, Seismic_r = fugi.customcmaps()\n",
     "\n",
-    "dirN2 = r\"../PYTHON_graphs/OUTPUTS/N2_calibration/\"\n",
+    "dir = r\"../PYTHON_graphs/OUTPUTS/N2_calibration/\"\n",
     "allfiles = (glob.glob(\"../PYTHON_graphs/DATA/Standard_grpahs/*.root\"))\n",
     "\n",
     "cmap_viridis = mpl.cm.get_cmap('viridis')"
@@ -82,10 +84,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#3D MFPAD\n",
+    "#sum el w-layer\n",
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "counts_el_sum_red=np.ma.masked_array(counts_el_sum,counts_el_sum<3)\n",
     "\n",
-    "cs=ax.contourf(w_layer,tsum,np.ma.masked_array(counts_el_sum.T,counts_el_sum.T<3), levels=40)\n",
+    "# cs=ax.contourf(w_layer,tsum,counts_el_sum_red.T, levels=40)\n",
+    "cs=ax.pcolormesh(w_layer,tsum,counts_el_sum_red.T, shading='gouraud')\n",
     "# ax.set_title(\"fish fillet y-axis\")\n",
     "\n",
     "ax.set_xlabel('w-layer [ns]')\n",
@@ -93,12 +97,12 @@
     "ax.set_ylim(-1,1)\n",
     "\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "cbar.set_ticks([counts_el_sum_red.min(),counts_el_sum_red.max()])\n",
     "cbar.set_ticklabels([\"min\",\"max\"])\n",
-    "cbar.set_ticks([counts_el_sum.min(),counts_el_sum.max()])\n",
     "cbar.ax.set_ylabel('normalized counts')\n",
     "\n",
-    "# fig.savefig(dir+\"MFPAD3d.png\", dpi=300, transparent=False)\n",
-    "# fig.savefig(dir+\"MFPAD3d.svg\", dpi=300, transparent=False)"
+    "fig.savefig(dir+\"el_sum_wlayer.png\", dpi=300, transparent=False)\n",
+    "# fig.savefig(dir+\"el_sum_wlayer.svg\", dpi=300, transparent=False)"
    ]
   },
   {
@@ -124,31 +128,32 @@
    "source": [
     "#3D MFPAD\n",
     "counts_el_xy_new=np.ma.masked_where(np.sqrt(X_el**2+Y_el**2)<25,counts_el_xy.reshape(-1)).reshape(len(x_el),len(y_el))\n",
+    "counts_el_xy_new_red=np.ma.masked_array(counts_el_xy_new, counts_el_xy_new<=5)\n",
+    "norm=mcolors.LogNorm(counts_el_xy_new_red.min(),counts_el_xy_new_red.max())\n",
     "\n",
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "aspect=(x_el.max()/y_el.max())\n",
-    "cs=ax.contourf(x_el,y_el,np.ma.masked_array(counts_el_xy_new, counts_el_xy_new<=5), levels=20)\n",
+    "# cs=ax.contourf(x_el,y_el,counts_el_xy_new_red.T, levels=20)\n",
+    "cs=ax.pcolormesh(x_el,y_el,counts_el_xy_new_red.T, shading='gouraud')\n",
+    "# cs=ax.pcolormesh(x_el,y_el,counts_el_xy_new_red.T, shading='gouraud', norm=norm)\n",
     "# ax.set_title(\"fish fillet y-axis\")\n",
-    "\n",
     "\n",
     "ax.set_xlabel('x-axis [mm]')\n",
     "ax.set_ylabel('y-axis [mm]')\n",
     "ax.set_aspect(aspect)\n",
-    "ax.plot([0, -19], [0, -33], color='black', linewidth=3., linestyle='--', alpha=0.7)\n",
-    "ax.plot([0, -33], [0, 19.5], color='black', linewidth=3., linestyle='--', alpha=0.7)\n",
-    "ax.plot([0, 33], [0, 20], color='black', linewidth=3., linestyle='--', alpha=0.7)\n",
+    "ax.plot([0, 20], [0, -33], color='black', linewidth=3., linestyle='--', alpha=0.5)\n",
+    "ax.plot([0, -33], [0, -19.5], color='black', linewidth=3., linestyle='--', alpha=0.5)\n",
+    "ax.plot([0, 19], [0, 32], color='black', linewidth=3., linestyle='--', alpha=0.5)\n",
     "ax.grid()\n",
     "\n",
-    "\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "cbar.set_ticks([counts_el_xy_new_red.min(),counts_el_xy_new_red.max()])\n",
     "cbar.set_ticklabels([\"min\",\"max\"])\n",
-    "# cbar.set_ticks([counts_el_xy.min(),counts_el_xy.max()])\n",
-    "# cbar.set_ticks([0,counts_el_xy.max()])\n",
     "\n",
     "cbar.ax.set_ylabel('normalized counts')\n",
     "\n",
-    "# fig.savefig(dir+\"MFPAD3d.png\", dpi=300, transparent=False)\n",
-    "# fig.savefig(dir+\"MFPAD3d.svg\", dpi=300, transparent=False)"
+    "fig.savefig(dir+\"MCP_el_xy_red.png\", dpi=300, transparent=False)\n",
+    "# fig.savefig(dir+\"MCP_el_xy_red.svg\", dpi=300, transparent=False)"
    ]
   },
   {
@@ -158,37 +163,34 @@
    "outputs": [],
    "source": [
     "#3D MFPAD\n",
-    "import matplotlib.colors as mcolors\n",
-    "counts_rec_xy_new=np.ma.masked_where(np.sqrt(X_rec**2+Y_rec**2)<20,counts_rec_xy.reshape(-1)).reshape(len(x_rec),len(y_rec))\n",
+    "\n",
+    "counts_rec_xy_new=np.ma.masked_where(np.sqrt(X_rec**2+Y_rec**2)<25,counts_rec_xy.reshape(-1)).reshape(len(x_rec),len(y_rec))\n",
+    "counts_rec_xy_new_red=np.ma.masked_array(counts_rec_xy_new, counts_rec_xy_new<=5)\n",
+    "norm=mcolors.LogNorm(counts_rec_xy_new_red.min(),counts_rec_xy_new_red.max())\n",
     "\n",
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "aspect=(x_rec.max()/y_rec.max())\n",
-    "# cs=ax.contourf(x_rec,y_rec,np.ma.masked_array(counts_rec_xy_new, counts_rec_xy_new<=5), levels=20)\n",
-    "cs=ax.contourf(x_rec,y_rec,np.ma.masked_array(counts_rec_xy_new, counts_rec_xy_new<=5), locator=mpl.ticker.LogLocator())\n",
+    "# cs=ax.contourf(x_rec,y_rec,counts_rec_xy_new_red.T, levels=20)\n",
+    "# cs=ax.pcolormesh(x_rec,y_rec,counts_rec_xy_new_red.T, shading='gouraud')\n",
+    "cs=ax.pcolormesh(x_rec,y_rec,counts_rec_xy_new_red.T, shading='gouraud', norm=norm)\n",
     "# ax.set_title(\"fish fillet y-axis\")\n",
     "\n",
     "ax.set_xlabel('x-axis [mm]')\n",
     "ax.set_ylabel('y-axis [mm]')\n",
     "ax.set_aspect(aspect)\n",
-    "# ax.plot([0, -19], [0, -33], color='black', linewidth=3., linestyle='--', alpha=0.7)\n",
-    "# ax.plot([0, -33], [0, 19.5], color='black', linewidth=3., linestyle='--', alpha=0.7)\n",
-    "# ax.plot([0, 33], [0, 20], color='black', linewidth=3., linestyle='--', alpha=0.7)\n",
+    "ax.plot([0, 19], [0, -33], color='black', linewidth=3., linestyle='--', alpha=0.5)\n",
+    "ax.plot([0, -33], [0, -19.5], color='black', linewidth=3., linestyle='--', alpha=0.5)\n",
+    "ax.plot([0, 19], [0, 32], color='black', linewidth=3., linestyle='--', alpha=0.5)\n",
     "ax.grid()\n",
     "\n",
-    "norm = mcolors.LogNorm(np.ma.masked_array(counts_rec_xy_new, counts_rec_xy_new<=5).min(), np.ma.masked_array(counts_rec_xy_new, counts_rec_xy_new<=5).max())\n",
-    "\n",
-    "im = ax.pcolormesh(np.ma.masked_array(counts_rec_xy_new, counts_rec_xy_new<=5), norm=norm)\n",
-    "# im.set_norm(norm)\n",
-    "\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "cbar.set_ticks([counts_rec_xy_new_red.min(),counts_rec_xy_new_red.max()])\n",
     "cbar.set_ticklabels([\"min\",\"max\"])\n",
-    "# cbar.set_ticks([counts_el_xy.min(),counts_el_xy.max()])\n",
-    "# cbar.set_ticks([0,counts_el_xy.max()])\n",
     "\n",
     "cbar.ax.set_ylabel('normalized counts')\n",
     "\n",
-    "# fig.savefig(dir+\"MFPAD3d.png\", dpi=300, transparent=False)\n",
-    "# fig.savefig(dir+\"MFPAD3d.svg\", dpi=300, transparent=False)"
+    "fig.savefig(dir+\"MCP_rec_xy_red.png\", dpi=300, transparent=False)\n",
+    "# fig.savefig(dir+\"MCP_rec_xy_red.svg\", dpi=300, transparent=False)"
    ]
   },
   {
@@ -198,9 +200,15 @@
    "outputs": [],
    "source": [
     "#3D MFPAD\n",
+    "counts_el_xy_red=np.ma.masked_array(counts_el_xy,counts_el_xy<1)\n",
+    "norm=mcolors.LogNorm(counts_el_xy_red.min(),counts_el_xy_red.max())\n",
+    "\n",
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "aspect=(x_el.max()/y_el.max())\n",
-    "cs=ax.contourf(x_el,y_el,np.ma.masked_array(counts_el_xy.T,counts_el_xy.T<1), locator=mpl.ticker.LogLocator())\n",
+    "\n",
+    "# cs=ax.contourf(x_el,y_el,counts_el_xy_red.T, levels=20)\n",
+    "# cs=ax.pcolormesh(x_el,y_el,counts_el_xy_red.T, shading='gouraud', norm=norm)\n",
+    "cs=ax.pcolormesh(x_el,y_el,counts_el_xy_red.T, shading='gouraud')\n",
     "# ax.set_title(\"fish fillet y-axis\")\n",
     "\n",
     "ax.set_xlabel('x-axis [mm]')\n",
@@ -208,41 +216,13 @@
     "ax.set_aspect(aspect)\n",
     "\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "cbar.set_ticks([counts_el_xy_red.min(),counts_el_xy_red.max()])\n",
     "cbar.set_ticklabels([\"min\",\"max\"])\n",
-    "# cbar.set_ticks([counts_el_xy.min(),counts_el_xy.max()])\n",
-    "cbar.set_ticks([1,counts_el_xy.max()])\n",
     "\n",
     "cbar.ax.set_ylabel('normalized counts')\n",
     "\n",
-    "# fig.savefig(dir+\"MFPAD3d.png\", dpi=300, transparent=False)\n",
-    "# fig.savefig(dir+\"MFPAD3d.svg\", dpi=300, transparent=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#3D MFPAD\n",
-    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "aspect=(x_el.max()/y_el.max())\n",
-    "cs=ax.contourf(x_el,y_el,np.ma.masked_array(counts_el_xy.T,counts_el_xy.T<1), levels=20)\n",
-    "# ax.set_title(\"fish fillet y-axis\")\n",
-    "\n",
-    "ax.set_xlabel('x-axis [mm]')\n",
-    "ax.set_ylabel('y-axis [mm]')\n",
-    "ax.set_aspect(aspect)\n",
-    "\n",
-    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
-    "cbar.set_ticklabels([\"min\",\"max\"])\n",
-    "cbar.set_ticks([counts_el_xy.min(),counts_el_xy.max()])\n",
-    "# cbar.set_ticks([1,counts_el_xy.max()])\n",
-    "\n",
-    "cbar.ax.set_ylabel('normalized counts')\n",
-    "\n",
-    "# fig.savefig(dir+\"MFPAD3d.png\", dpi=300, transparent=False)\n",
-    "# fig.savefig(dir+\"MFPAD3d.svg\", dpi=300, transparent=False)"
+    "fig.savefig(dir+\"el_mom_ex.png\", dpi=300, transparent=False)\n",
+    "# fig.savefig(dir+\"el_mom_ex.svg\", dpi=300, transparent=False)"
    ]
   },
   {
@@ -254,10 +234,14 @@
     "#3D MFPAD\n",
     "x_el_lin_r=fugi.remap(x_el_lin,-45,45)\n",
     "y_el_lin_r=fugi.remap(y_el_lin,-45,45)\n",
+    "counts_el_lin_red=np.ma.masked_array(counts_el_lin,counts_el_lin<0.00001)\n",
+    "norm=mcolors.LogNorm(counts_el_lin_red.min(),counts_el_lin_red.max())\n",
     "\n",
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "aspect=(x_el.max()/y_el.max())\n",
-    "cs=ax.contourf(x_el_lin_r,y_el_lin_r,np.ma.masked_array(counts_el_lin.T,counts_el_lin.T<0.00001), levels=20)\n",
+    "# cs=ax.contourf(x_el_lin_r,y_el_lin_r,counts_el_lin_red, levels=40)\n",
+    "# cs=ax.pcolormesh(x_el_lin_r,y_el_lin_r,counts_el_lin_red, shading='gouraud')\n",
+    "cs=ax.pcolormesh(x_el_lin_r,y_el_lin_r,counts_el_lin_red.T, shading='gouraud', norm=norm)\n",
     "# ax.set_title(\"fish fillet y-axis\")\n",
     "\n",
     "ax.set_xlabel('x-axis [mm]')\n",
@@ -265,14 +249,13 @@
     "ax.set_aspect(aspect)\n",
     "\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "# cbar.set_ticks([counts_el_lin_red.min(),counts_el_lin_red.max()])\n",
     "# cbar.set_ticklabels([\"min\",\"max\"])\n",
-    "# cbar.set_ticks([counts_el_lin.min(),counts_el_lin.max()])\n",
-    "# cbar.set_ticks([1,counts_el_xy.max()])\n",
     "\n",
     "cbar.ax.set_ylabel('deviation from linearity')\n",
     "\n",
-    "# fig.savefig(dir+\"MFPAD3d.png\", dpi=300, transparent=False)\n",
-    "# fig.savefig(dir+\"MFPAD3d.svg\", dpi=300, transparent=False)"
+    "fig.savefig(dir+\"MCP_el_linearity.png\", dpi=300, transparent=False)\n",
+    "# fig.savefig(dir+\"MCP_el_linearity.svg\", dpi=300, transparent=False)"
    ]
   },
   {
@@ -284,22 +267,30 @@
     "#3D MFPAD\n",
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "aspect=(tof1.max()/tof2.max())\n",
-    "cs=ax.contourf(tof1,tof2,np.ma.masked_array(counts_pipico.T,counts_pipico.T<1), levels=20)\n",
+    "counts_pipico_red=np.ma.masked_array(counts_pipico,counts_pipico<1)\n",
     "# ax.set_title(\"fish fillet y-axis\")\n",
+    "\n",
+    "cs=ax.pcolormesh(tof1,tof2,counts_pipico_red.T, shading='gouraud')\n",
     "\n",
     "ax.set_xlabel('tof1 [ns]')\n",
     "ax.set_ylabel('tof2 [ns]')\n",
     "ax.set_aspect(aspect)\n",
     "\n",
+    "axins = ax.inset_axes([0.55, 0.06, 0.42, 0.42])\n",
+    "axins.pcolormesh(tof1,tof2,np.ma.masked_array(counts_pipico.T,counts_pipico.T<1), shading='gouraud')\n",
+    "axins.set_xlim(2800,3100)\n",
+    "axins.set_ylim(2900,3200)\n",
+    "axins.tick_params(axis='x', labelsize=12)\n",
+    "axins.tick_params(axis='y', labelsize=12)\n",
+    "\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "cbar.set_ticks([counts_pipico_red.min(),counts_pipico_red.max()])\n",
     "cbar.set_ticklabels([\"min\",\"max\"])\n",
-    "cbar.set_ticks([counts_pipico.min(),counts_pipico.max()])\n",
-    "# cbar.set_ticks([1,counts_el_xy.max()])\n",
     "\n",
     "cbar.ax.set_ylabel('normalized counts')\n",
     "\n",
-    "# fig.savefig(dir+\"MFPAD3d.png\", dpi=300, transparent=False)\n",
-    "# fig.savefig(dir+\"MFPAD3d.svg\", dpi=300, transparent=False)"
+    "fig.savefig(dir+\"N2_pipico_insert.png\", dpi=300, transparent=False)\n",
+    "# fig.savefig(dir+\"N2_pipico_insert.svg\", dpi=300, transparent=False)"
    ]
   },
   {
