--- a/Ar_calibration.ipynb
+++ b/Ar_calibration.ipynb
@@ -31,7 +31,11 @@
     "                  usecols = \"C, D\",\n",
     "                  convert_float = True)\n",
     "                #   dtype={\"B\" : float, 'tof_rand': float, 'z_rand': float, 'mom_mag_rand': float,'cos(theta)_tof_rand': float})\n",
-    "points.dropna(inplace=True);"
+    "points.dropna(inplace=True);\n",
+    "\n",
+    "dir = r\"../PYTHON_graphs/OUTPUTS/Ar_calibration/\"\n",
+    "cmap_viridis = mpl.cm.get_cmap('viridis')\n",
+    "\n"
    ]
   },
   {
@@ -50,27 +54,28 @@
    "outputs": [],
    "source": [
     "#polynomial fit with degree = 2\n",
-    "model = np.poly1d(np.polyfit(points[\"ph energy\"], points[\"radius square\"], 2))\n",
+    "p, residuals, rank, singular_values, rcond =np.polyfit(points[\"ph energy\"], points[\"radius square\"], 2, full=True)\n",
+    "model = np.poly1d(p)\n",
     "\n",
-    "#FIX THE DETERMINATION COEFFICEINT\n",
-    "# https://stackoverflow.com/questions/893657/how-do-i-calculate-r-squared-using-python-and-numpy\n",
-    "r2 = np.corrcoef(points[\"ph energy\"], points[\"radius square\"])[0,1]**2\n",
+    "ybar = np.sum(points[\"radius square\"])/len(points[\"radius square\"]) \n",
+    "sstot = np.sum((points[\"radius square\"] - ybar)**2)\n",
+    "r2 = 1-np.divide(residuals,sstot)\n",
     "\n",
     "#add fitted polynomial line to scatterplot\n",
     "polyline = np.linspace(249, 261, 50)\n",
+    "fit_info = (f\"y = {model[0]:+.2f} x\\u00b2 {model[1]:+.2f}x {model[2]:+.2f} \\nR\\u00b2 = {r2[0]:.6f}\")\n",
     "\n",
-    "fit_info = (f\"y = {model[0]:.3f}x2 + {model[1]:.3f}x + {model[2]:.3f} \\nR2 = {r2:.3f}\")\n",
-    "\n",
-    "fig,ax= plt.subplots(1,figsize=(15, 10))\n",
-    "# plt.suptitle(\"fish\")\n",
-    "ax.scatter(points[\"ph energy\"], points[\"radius square\"])\n",
-    "ax.plot(polyline, model(polyline), \"--\", alpha=0.5)\n",
+    "fig,ax= plt.subplots(1,figsize=(10, 10))\n",
+    "# plt.suptitle(\"Fitting\")\n",
+    "ax.scatter(points[\"ph energy\"], points[\"radius square\"], color=cmap_viridis(0), s=80)\n",
+    "ax.plot(polyline, model(polyline), \"--\", color=cmap_viridis(0), alpha=0.5)\n",
     "ax.set_xlabel('photoelectron energy [eV]')\n",
-    "ax.set_ylabel('squared radius [mm2]')\n",
+    "ax.set_ylabel('squared radius [mm\\u00b2]')\n",
     "ax.legend(title=fit_info, loc=\"best\")\n",
+    "ax.grid()\n",
     "\n",
-    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/lens_effect_fish.svg\", dpi=144, transparent=False)\n",
-    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/lens_effect_fish.png\", dpi=144, transparent=False)"
+    "fig.savefig(dir+\"regression_radius.svg\", dpi=300, transparent=False)\n",
+    "fig.savefig(dir+\"regression_radius.png\", dpi=300, transparent=False)"
    ]
   },
   {
@@ -80,9 +85,11 @@
    "outputs": [],
    "source": [
     "Ar = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/Ar_FULL_analysis.root\")\n",
-    "Ar[\"all_toghether/\"].keys()\n",
-    "Ar[\"all_toghether/fish filet y\"].all_members\n",
-    "Ar[\"all_toghether/position\"].values()\n"
+    "# Ar[\"all_toghether/\"].keys()\n",
+    "# Ar[\"all_toghether/\"].classnames()\n",
+    "# Ar[\"all_toghether/fish filet y\"].all_members\n",
+    "# Ar[\"all_toghether/fish filet y\"].get_values()\n",
+    "# type(Ar[\"all_toghether/fish filet y\"])"
    ]
   },
   {
@@ -91,9 +98,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fish_fillet_x=np.array(Ar[\"all_toghether/fish filet x\"].to_numpy(),dtype=object)\n",
-    "fish_fillet_y=np.array(Ar[\"all_toghether/fish filet y\"].to_numpy(),dtype=object)\n",
-    "cthetaEE=np.array(Ar[\"all_toghether/check_cthetaEE\"].to_numpy(),dtype=object)"
+    "tof,xmm,fish_fillet_x=fugi.import_TH2Dgeneric(Ar,\"all_toghether/fish filet x\")\n",
+    "tof,ymm,fish_fillet_y=fugi.import_TH2Dgeneric(Ar,\"all_toghether/fish filet y\")\n",
+    "ctheta_en,en,cthetaEE=fugi.import_TH2Dgeneric(Ar,\"all_toghether/check_cthetaEE\")"
    ]
   },
   {
@@ -103,19 +110,112 @@
    "outputs": [],
    "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "cs=ax.scatter(fish_fillet_y[0][0],fish_fillet_y[0][1], cmap=cmap_temp)\n",
-    "ax.set_title(\"MFPAD tot \")\n",
     "\n",
-    "# aspect=(phiM.max()/cosM.max())\n",
-    "ax.set_xlabel('phi [DEG]')\n",
-    "ax.set_ylabel('cos(theta) [adm]')\n",
-    "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
+    "#masking\n",
+    "fish_fillet_y_masked = np.ma.masked_array(fish_fillet_y, fish_fillet_y < 25)\n",
+    "\n",
+    "# cs=ax.contourf(tof,ymm,fish_fillet_y_masked.T, levels=20)\n",
+    "cs=ax.pcolormesh(tof,ymm,fish_fillet_y_masked.T, shading='gouraud')\n",
+    "\n",
+    "# ax.set_title(\"fish fillet y-axis\")\n",
+    "\n",
+    "ax.set_xlabel('tof [ns]')\n",
+    "ax.set_xlim([14.75, 17.4])\n",
+    "ax.set_ylabel('y axis [mm]')\n",
+    "ax.set_ylim([-40., 40.])\n",
+    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "\n",
+    "cbar.set_ticks([fish_fillet_y_masked.min(),fish_fillet_y_masked.max()])\n",
+    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.ax.set_ylabel('normalized counts')\n",
+    "\n",
+    "fig.savefig(dir+\"fish_fillet_y.png\", dpi=300, transparent=False)\n",
+    "# fig.savefig(dir+\"fish_fillet_y.svg\", dpi=300, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "\n",
+    "#masking\n",
+    "fish_fillet_x_masked = np.ma.masked_array(fish_fillet_x, fish_fillet_x < 25)\n",
+    "\n",
+    "# cs=ax.contourf(tof,ymm,fish_fillet_x_masked.T, levels=20)\n",
+    "cs=ax.pcolormesh(tof,ymm,fish_fillet_x_masked.T, shading='gouraud')\n",
+    "\n",
+    "# ax.set_title(\"fish fillet y-axis\")\n",
+    "\n",
+    "ax.set_xlabel('tof [ns]')\n",
+    "ax.set_xlim([14.75, 17.4])\n",
+    "ax.set_ylabel('y axis [mm]')\n",
+    "ax.set_ylim([-40., 40.])\n",
+    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "\n",
+    "cbar.set_ticks([fish_fillet_x_masked.min(),fish_fillet_x_masked.max()])\n",
+    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.ax.set_ylabel('normalized counts')\n",
+    "\n",
+    "fig.savefig(dir+\"fish_fillet_x.png\", dpi=300, transparent=False)\n",
+    "# fig.savefig(dir+\"fish_fillet_x.svg\", dpi=300, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "\n",
+    "cs=ax.contourf(tof,ymm,fish_fillet_y.T, vmin=20, extend = \"min\")\n",
+    "# ax.set_title(\"fish fillet y-axis\")\n",
+    "\n",
+    "ax.set_xlabel('tof [ns]')\n",
+    "ax.set_xlim([14.75, 17.4])\n",
+    "ax.set_ylabel('y axis [mm]')\n",
+    "ax.set_ylim([-40., 40.])\n",
+    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "\n",
     "# cbar.set_ticklabels([\"min\",\"max\"])\n",
     "# cbar.set_ticks([totMFPAD.min(),totMFPAD.max()])\n",
-    "cbar.ax.set_ylabel('normalised counts')\n",
-    "# ax.set_aspect(aspect)\n",
+    "cbar.ax.set_ylabel('counts')\n",
+    "cs.cmap.set_under(color=\"k\",alpha=0.2)\n",
     "\n",
-    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/total_MFPAD_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)"
+    "\n",
+    "# fig.savefig(dir+\"fish_fillet_y.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
+    "# fig.savefig(dir+\"fish_fillet_y.svg\", figsize=(50, 24), dpi=144, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "\n",
+    "cthetaEE_masked = np.ma.masked_array(cthetaEE, cthetaEE < 10)\n",
+    "\n",
+    "# cs=ax.contourf(ctheta_en,en,cthetaEE_masked.T, levels=20)\n",
+    "cs=ax.pcolormesh(ctheta_en,en,cthetaEE_masked.T, shading='gouraud')\n",
+    "\n",
+    "# ax.set_title(\"fish fillet y-axis\")\n",
+    "\n",
+    "ax.set_xlabel('cos(theta) [adm]')\n",
+    "ax.set_ylabel('kinetc energy photoelectrons [eV]')\n",
+    "ax.set_ylim([0., 15.])\n",
+    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "\n",
+    "cbar.set_ticks([cthetaEE_masked.min(),cthetaEE_masked.max()])\n",
+    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.ax.set_ylabel('normalized counts')\n",
+    "\n",
+    "fig.savefig(dir+\"ctheta_EE.png\", dpi=300, transparent=False)\n",
+    "# fig.savefig(dir+\"ctheta_EE.svg\", dpi=300, transparent=False)"
    ]
   },
   {
