*CRITICAL CHANGES* the MFPAD has been resorte along cos(theta) and the cosM accordingly tehe contrast map is inverted: probably due to the defintion of PECD

--- a/72_2D_MFPADs_theory.ipynb
+++ b/72_2D_MFPADs_theory.ipynb
@@ -160,13 +160,17 @@
     "\"\"\"\n",
     "#SORTED FULL **cos(theta) = [-1,1]**, phi = [-179.1, 179.1]\n",
     "# len = 200000\n",
-    "phi_full_sorted=frame_srt.get_group(\"1_1\").sort_values(by=[\"cos(theta)\",\"phi\"])[\"phi\"] \n",
-    "ctheta_full_sorted=frame_srt.get_group(\"1_1\").sort_values(by=[\"cos(theta)\",\"phi\"])[\"cos(theta)\"]\n",
+    "phi_full_sorted=frame_srt.get_group(\"1_1\").sort_values(by=[\"phi\",\"cos(theta)\"])[\"phi\"] \n",
+    "phi_rad_sorted = phi_full_sorted * np.pi/180.\n",
+    "\n",
+    "ctheta_full_sorted=frame_srt.get_group(\"1_1\").sort_values(by=[\"phi\",\"cos(theta)\"])[\"cos(theta)\"]\n",
+    "theta_rad_sorted = np.arccos(ctheta_full_sorted)\n",
+    "theta_full = theta_rad_sorted*180./np.pi\n",
     "\n",
     "#SORTED unique **cos(theta) = [-1,1]**, phi = [-179.1, 179.1]  \n",
-    "# len(phiMs) = 200, len(cosMs) = 100\n",
-    "phiMs=frame_srt.get_group(\"1_1\").sort_values(by=[\"cos(theta)\",\"phi\"])[\"phi\"].unique()\n",
-    "cosMs=frame_srt.get_group(\"1_1\").sort_values(by=[\"cos(theta)\",\"phi\"])[\"cos(theta)\"].unique()\n",
+    "# len(phiMs) = 200, len(cosM) = 100\n",
+    "phiM=frame_srt.get_group(\"1_1\").sort_values(by=[\"phi\",\"cos(theta)\"])[\"phi\"].unique()\n",
+    "cosM=frame_srt.get_group(\"1_1\").sort_values(by=[\"phi\",\"cos(theta)\"])[\"cos(theta)\"].unique()\n",
     "\n",
     "#UNSORTED FULL phi = [-179.1, 179.1]\n",
     "# len = 200000\n",
@@ -180,29 +184,28 @@
     "theta_full = theta_rad*180./np.pi\n",
     "\n",
     "#UNSORTED unique cos(theta) = [1,-1], phi = [-179.1, 179.1]\n",
-    "# len(phiMs) = 200, len(cosMs) = 100\n",
-    "#NOTE      np.any(phiM == phiMs) -> TRUE\n",
-    "#          np.any(cosM == np.flip(cosMs)) -> TRUE\n",
-    "phiM = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,0].unique() # phi = [-179.1, 179.1]\n",
-    "cosM = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,1].unique() # cos(theta) = [1,-1]\n",
-    "\n",
+    "# len(phiMu) = 200, len(cosMu) = 100\n",
+    "#NOTE      np.any(phiM == phiMu) -> TRUE\n",
+    "#          np.any(cosM == np.flip(cosMu)) -> TRUE\n",
+    "phiMu = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,0].unique() # phi = [-179.1, 179.1]\n",
+    "cosMu = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,1].unique() # cos(theta) = [1,-1]\n",
     "\n",
     "#NOTE: for np.MESHGRID:\n",
     "#for the 2D case with inputs of length M and N, the outputs are of shape (N, M) for ‘xy’ indexing and (M, N) for ‘ij’ indexing. Cartesia \"xy\" by default\n",
     "#REMEBER: np.any(phiM == phiMs) -> TRUE\n",
     "\n",
-    "#This SHOULDN´T be use to inrepolate\n",
-    "#because **cos(theta) = [-1,1]**\n",
-    "phiMMs, cosMMs = np.meshgrid(phiMs, cosMs)\n",
-    "phiMMs_rad, thetaMMs_rad = np.meshgrid(phiMs*np.pi/180., np.arccos(cosMs))\n",
-    "\n",
-    "#This is the right one to use to interpolate\n",
+    "#This is the right one to use to interpolate if the MFPAD IS SORTED\n",
     "# because cos(theta)=[1,-1]\n",
     "phiMM, cosMM = np.meshgrid(phiM, cosM)\n",
     "phiMM_rad, thetaMM_rad = np.meshgrid(phiM*np.pi/180., np.arccos(cosM))\n",
     "\n",
+    "#because **cos(theta) = [-1,1]**\n",
+    "phiMMu, cosMMu = np.meshgrid(phiMu, cosMu)\n",
+    "phiMMu_rad, thetaMMu_rad = np.meshgrid(phiMu*np.pi/180., np.arccos(cosMu))\n",
+    "\n",
     "print(\"pihM \", phiM.shape, \"cosM \", cosM.shape)\n",
-    "print(\"pihMs \", phiMM.shape, \"cosMs \", cosMM.shape)\n",
+    "print(\"cosM[0] \", cosM[0], \"cosMu[0] \", cosMu[0])\n",
+    "print(\"pihMM \", phiMM.shape, \"cosMM \", cosMM.shape)\n",
     "print(type(phiM), type(phiMM))"
    ]
   },
@@ -319,8 +322,8 @@
     "#counts_temp: in photon_coordiantes cos(theta)=[1,-1], phi=[-180,180], ordered by cos(theta)\n",
     "for group in frame_srt:\n",
     "    # elsorted=group[1].sort_values(by=[\"cos(theta)\",\"phi\"]) #just a try to remap cos(theta)\n",
-    "    # counts_temp.append(elsorted[\"value\"].values.reshape(200,100))\n",
-    "    counts_temp.append(group[1][\"value\"].values)\n",
+    "    # counts_temp.append(group[1][\"value\"].values)\n",
+    "    counts_temp.append(frame_srt.get_group(group[0]).sort_values(by=[\"phi\",\"cos(theta)\"])[\"value\"])\n",
     "counts_temp=np.array(counts_temp).reshape(72,200,100)\n",
     "\n",
     "#MFPAD_S_phi: in photon_coordiantes cos(theta)=[-1,1], phi=[-180,180] ordered by phi\n",
@@ -445,12 +448,12 @@
     "#the grid isa according to the MFPAD filling cos(theta) [1,-1], phi [-180,180]\n",
     "#SET THE CONVENTION! what works is convention 1 with option 2. in fugi.rot3d_MFPAD\n",
     "\n",
-    "MFPAD_std_rot,cos_std_rot,phi_std_rot=fugi.rot3d_MFPAD(counts_temp,theta_rad,phi_rad,cosphi_th_adj,phiMM,cosMM,method=\"linear\",convention=1)\n",
-    "MFPAD_S_phi_LF,cos_S_phi_LF,phi_S_phi_LF=fugi.rot3d_MFPAD(MFPAD_S_phi,theta_rad,phi_rad,cosphi_adj_phi,phiMM,cosMM,method=\"linear\",convention=1)\n",
-    "MFPAD_S_cos_LF,cos_S_cos_LF,phi_S_cos_LF=fugi.rot3d_MFPAD(MFPAD_S_cos,theta_rad,phi_rad,cosphi_adj_cos,phiMM,cosMM,method=\"linear\",convention=1)\n",
+    "MFPAD_std_rot,cos_std_rot,phi_std_rot=fugi.rot3d_MFPAD(counts_temp,theta_rad_sorted,phi_rad_sorted,cosphi_th_adj,phiMM,cosMM,method=\"linear\",convention=1)\n",
+    "MFPAD_S_phi_LF,cos_S_phi_LF,phi_S_phi_LF=fugi.rot3d_MFPAD(MFPAD_S_phi,theta_rad_sorted,phi_rad_sorted,cosphi_adj_phi,phiMM,cosMM,method=\"linear\",convention=1)\n",
+    "MFPAD_S_cos_LF,cos_S_cos_LF,phi_S_cos_LF=fugi.rot3d_MFPAD(MFPAD_S_cos,theta_rad_sorted,phi_rad_sorted,cosphi_adj_cos,phiMM,cosMM,method=\"linear\",convention=1)\n",
     "\n",
-    "# MFPAD_R_phi_LF,cos_R_phi_LF,phi_R_phi_LF=fugi.rot3d_MFPAD(MFPAD_R_phi,theta_rad,phi_rad,cosphi_adj_phi,phiMM,cosMM,method=\"linear\")\n",
-    "# MFPAD_R_cos_LF,cos_R_cos_LF,phi_R_cos_LF=fugi.rot3d_MFPAD(MFPAD_R_cos,theta_rad,phi_rad,cosphi_adj_cos,phiMM,cosMM,method=\"linear\")\n",
+    "# MFPAD_R_phi_LF,cos_R_phi_LF,phi_R_phi_LF=fugi.rot3d_MFPAD(MFPAD_R_phi,theta_rad_sorted,phi_rad_sorted,cosphi_adj_phi,phiMM,cosMM,method=\"linear\")\n",
+    "# MFPAD_R_cos_LF,cos_R_cos_LF,phi_R_cos_LF=fugi.rot3d_MFPAD(MFPAD_R_cos,theta_rad_sorted,phi_rad_sorted,cosphi_adj_cos,phiMM,cosMM,method=\"linear\")\n",
     "\n",
     "#flipping sorted S enantiomer for R enantiomer: JUST ALONG COS(theta) -> axis=1\n",
     "for el in MFPAD_S_phi_LF:\n",
@@ -530,7 +533,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "plt.plot(ctheta_full.reshape(-1),\".\")\n",
+    "plt.plot(ctheta_full_sorted.reshape(-1),\".\")\n",
     "plt.plot(cos_S_phi_LF[4].reshape(-1),\"o\")"
    ]
   },
@@ -633,7 +636,7 @@
     "#NOTE for phi ordered the scannig order of axis has to be inverted\n",
     "for i,ax in zip(range(72),axes.T.ravel()) :\n",
     "    #ax.tricontourf(phi_S_phi_LF[i].reshape(-1),cos_S_phi_LF[i].reshape(-1),tMFPAD_S_phi_LF[i].reshape(-1))\n",
-    "    #ax.contourf(phi_full.reshape(200,100),ctheta_full.reshape(200,100),MFPAD_S_phi[i].reshape(200,100), levels=20, vmin=0.0001)\n",
+    "    #ax.contourf(phi_full.reshape(200,100),ctheta_full_sorted.reshape(200,100),MFPAD_S_phi[i].reshape(200,100), levels=20, vmin=0.0001)\n",
     "    ax.contourf(phiMM,cosMM,MFPAD_S_phi[i].T)\n",
     "    ax.tick_params(labelsize=12)\n",
     "    ax.text(0, 0, \"S_en \"+str(cosphi_th_phi[i]), ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
@@ -708,7 +711,7 @@
     "\n",
     "    for i,ax in zip(range(72),axes.ravel()) :\n",
     "        # ax.tricontourf(phi_S_phi_LF[i].reshape(-1),cos_S_phi_LF[i].reshape(-1),tMFPAD_S_phi_LF[i].reshape(-1))\n",
-    "        # ax.contourf(phi_full.reshape(200,100),ctheta_full.reshape(200,100),MFPAD_S_phi[i].reshape(200,100), levels=20, vmin=0.0001)\n",
+    "        # ax.contourf(phi_full.reshape(200,100),ctheta_full_sorted.reshape(200,100),MFPAD_S_phi[i].reshape(200,100), levels=20, vmin=0.0001)\n",
     "        # ax.contourf(phiMM,cosMM,MFPAD_S_cos[i].T)\n",
     "        cs, ax=fugi.plot_interpolation(phiM,cosM,MFPAD_S_cos[i].T,ax=ax,ystep=0.01,cmap=cmap_temp)\n",
     "        ax.tick_params(labelsize=12)\n",
@@ -738,7 +741,7 @@
     "\n",
     "    for i,ax in zip(range(72),axes.ravel()) :\n",
     "        # ax.tricontourf(phi_S_phi_LF[i].reshape(-1),cos_S_phi_LF[i].reshape(-1),tMFPAD_S_phi_LF[i].reshape(-1))\n",
-    "        # ax.contourf(phi_full.reshape(200,100),ctheta_full.reshape(200,100),MFPAD_S_phi[i].reshape(200,100), levels=20, vmin=0.0001)\n",
+    "        # ax.contourf(phi_full.reshape(200,100),ctheta_full_sorted.reshape(200,100),MFPAD_S_phi[i].reshape(200,100), levels=20, vmin=0.0001)\n",
     "        # ax.contourf(phiMM,cosMM,MFPAD_S_cos[i].T)\n",
     "        cs, ax=fugi.plot_interpolation(phiM,cosM,MFPAD_S_phi[i].T,ax=ax,ystep=0.01,cmap=cmap_temp)\n",
     "        ax.tick_params(labelsize=12)\n",
@@ -763,7 +766,7 @@
     "    fig2a, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "    \n",
     "    for i,ax in zip(range(72),axes.ravel()) :\n",
-    "        # ax.contourf(phi_full.reshape(200,100),ctheta_full.reshape(200,100),MFPAD_R_cos[i].reshape(200,100), levels=20, vmin=0.0001)\n",
+    "        # ax.contourf(phi_full.reshape(200,100),ctheta_full_sorted.reshape(200,100),MFPAD_R_cos[i].reshape(200,100), levels=20, vmin=0.0001)\n",
     "        # ax.contourf(phiMM,cosMM,MFPAD_R_cos[i].T)\n",
     "        cs, ax=fugi.plot_interpolation(phiM,cosM,MFPAD_R_cos[i].T,ax=ax, ystep=0.01, cmap=cmap_temp)\n",
     "        ax.tick_params(labelsize=12)    \n",
@@ -787,7 +790,7 @@
     "    fig2a, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "    \n",
     "    for i,ax in zip(range(72),axes.ravel()) :\n",
-    "        # ax.contourf(phi_full.reshape(200,100),ctheta_full.reshape(200,100),MFPAD_R_cos[i].reshape(200,100), levels=20, vmin=0.0001)\n",
+    "        # ax.contourf(phi_full.reshape(200,100),ctheta_full_sorted.reshape(200,100),MFPAD_R_cos[i].reshape(200,100), levels=20, vmin=0.0001)\n",
     "        # ax.contourf(phiMM,cosMM,MFPAD_R_cos[i].T)\n",
     "        cs, ax=fugi.plot_interpolation(phiM,cosM,MFPAD_R_phi[i].T,ax=ax, ystep=0.01, cmap=cmap_temp)\n",
     "        ax.tick_params(labelsize=12)    \n",
@@ -913,7 +916,7 @@
    "source": [
     "# fugi = reload(fugi)\n",
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "cs,ax=fugi.plot_interpolation(xgo_phi_uniq,ygo_phi_uniq,param_matrix_phi[:,0,0].reshape(len(xgo_phi_uniq),-1).T, ax=ax, cmap=cmap_temp)\n",
+    "cs,ax=fugi.plot_interpolation(xgo_phi_uniq,ygo_phi_uniq,param_matrix_phi[:,0,0].reshape(len(xgo_phi_uniq),-1).T*100, ax=ax, cmap=cmap_temp)\n",
     "# cs=ax.tricontourf(xgo_cos,ygo_cos,fugi.smoothgauss(param_matrix_phi[:,0,0],0.3,0.6), extend=\"both\",cmap=cmap_temp,levels=20)\n",
     "\n",
     "ax.set_title(\"b1 map \"+en)\n",
@@ -1133,7 +1136,7 @@
     "\n",
     "# fugi = reload(fugi)\n",
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "cs,ax=fugi.plot_interpolation(xgo_cos_uniq,ygo_cos_uniq,param_matrix_cos[:,0,0].T, ax=ax, cmap=cmap_temp)\n",
+    "cs,ax=fugi.plot_interpolation(xgo_cos_uniq,ygo_cos_uniq,param_matrix_cos[:,0,0].T*100, ax=ax, cmap=cmap_temp)\n",
     "# cs=ax.tricontourf(xgo_cos,ygo_cos,fugi.smoothgauss(param_matrix_phi[:,0,0],0.3,0.6), extend=\"both\",cmap=cmap_temp,levels=20)\n",
     "\n",
     "ax.set_title(\"b1 map \"+en)\n",
